[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/BattleOverlay.gd" id="1_8m7o4"]

[node name="BattleOverlay" type="CanvasLayer"]
script = ExtResource("1_8m7o4")

[node name="Dim" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.55)
mouse_filter = 2

[node name="Container" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="KDee" type="AnimatedSprite2D" parent="Container"]
position = Vector2(0, 0)
scale = Vector2(3.2, 3.2)

[node name="Enemy" type="AnimatedSprite2D" parent="Container"]
position = Vector2(0, 0)
modulate = Color(0.86, 0.2, 0.2, 1)
scale = Vector2(1.8, 1.8)

[node name="Menu" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 0.6
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 0.0
offset_right = -24.0
offset_bottom = -24.0

[node name="MenuMargin" type="MarginContainer" parent="Menu"]
anchors_preset = 15
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="MenuVBox" type="VBoxContainer" parent="Menu/MenuMargin"]
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Menu/MenuMargin/MenuVBox"]
text = "K'Dee Actions"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 34

[node name="HPRow" type="HBoxContainer" parent="Menu/MenuMargin/MenuVBox"]
alignment = 1

[node name="KDeeHPMenu" type="Label" parent="Menu/MenuMargin/MenuVBox/HPRow"]
text = "K'Dee HP: 100"
theme_override_font_sizes/font_size = 28

[node name="NinjaHPMenu" type="Label" parent="Menu/MenuMargin/MenuVBox/HPRow"]
text = "Ninja HP: 100"
theme_override_font_sizes/font_size = 28

[node name="Punch" type="Button" parent="Menu/MenuMargin/MenuVBox"]
text = "Punch"
custom_minimum_size = Vector2(0, 80)
theme_override_font_sizes/font_size = 30

[node name="Kick" type="Button" parent="Menu/MenuMargin/MenuVBox"]
text = "Kick"
custom_minimum_size = Vector2(0, 80)
theme_override_font_sizes/font_size = 30

[node name="End" type="Button" parent="Menu/MenuMargin/MenuVBox"]
text = "End Turn"
custom_minimum_size = Vector2(0, 80)
theme_override_font_sizes/font_size = 30

[node name="HUD" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="KDeeLabel" type="Label" parent="HUD"]
offset_left = 24.0
offset_top = 24.0
text = "K'Dee"
theme_override_font_sizes/font_size = 20

[node name="KDeeHP" type="Label" parent="HUD"]
offset_left = 24.0
offset_top = 52.0
text = "HP: 100"
theme_override_font_sizes/font_size = 18

[node name="NinjaLabel" type="Label" parent="HUD"]
offset_right = -24.0
offset_top = 24.0
horizontal_alignment = 2
text = "Ninja"
theme_override_font_sizes/font_size = 20
anchors_preset = 2
anchor_right = 1.0
anchor_top = 0.0
anchor_bottom = 0.0

[node name="NinjaHP" type="Label" parent="HUD"]
anchors_preset = 2
anchor_right = 1.0
offset_right = -24.0
offset_top = 52.0
offset_left = -260.0
text = "HP: 100"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 18